declarative-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: declarative-app
  name: declarative-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: declarative-app
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: declarative-app
    spec:
      containers:
      - image: httpd
        name: httpd
        resources:
          limits:
            cpu: 10m
            memory: 50Mi
status: {}
