declarative-app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: declarative-app
  name: declarative-app
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: declarative-app
  type: ClusterIP
status:
  loadBalancer: {}
