declarative-app-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    app: declarative-app
  name: declarative-app
spec:
  port:
    targetPort: 80-80
  to:
    kind: ""
    name: declarative-app
    weight: null
status: {}
